--- a/Designer/Interface/Project/GenerationTarget.xaml
+++ b/Designer/Interface/Project/GenerationTarget.xaml
@@ -18,12 +18,12 @@
 	</Grid.Resources>
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="30" />
+			<ColumnDefinition Width="35" />
 			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="30" />
+			<ColumnDefinition Width="35" />
 		</Grid.ColumnDefinitions>
 
-		<Button Name="Enable" Grid.Column="0" Margin="0,1,1,1" Click="Enable_Click" Padding="0" >
+		<Button Name="Enable" Grid.Column="0" Margin="0,5,5,5" Click="Enable_Click" Padding="0" >
 			<Image Name="EnableImage" Source="pack://application:,,,/WCFArchitect;component/Icons/X16/NotAvailable.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 		</Button>
 			
@@ -32,10 +32,10 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
-			<Label Content="Output Path:" Height="Auto" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Grid.RowSpan="2" />
-			<pc:TextBox Text="{Binding Path=Path.Path}" Height="23" Margin="95,6,86,0" Name="OutputPathName" VerticalAlignment="Top" ToolTip="{Binding Path=Path.Path}"  />
-			<Button Content="Browse..." Height="23" HorizontalAlignment="Right" Margin="0,6,5,0" Name="OutputBrowse" VerticalAlignment="Top" Width="75" Click="OutputBrowse_Click" />
-			<Label Content="Framework:" Height="28" HorizontalAlignment="Left" Margin="5,3,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" />
+			<Label Content="Output Path:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="0" />
+			<pc:TextBox Text="{Binding Path=Path.Path}" Height="23" Margin="95,5,90,5" Name="OutputPathName" IsReadOnly="True" VerticalAlignment="Top" ToolTip="{Binding Path=Path.Path}"  />
+			<Button Content="Browse..." Height="23" HorizontalAlignment="Right" Margin="5" Name="OutputBrowse" VerticalAlignment="Top" Width="75" Click="OutputBrowse_Click" />
+			<Label Content="Framework:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="1" />
 			<ComboBox Height="Auto" Grid.Row="1" Margin="95,5,5,5" SelectedIndex="{Binding Path=Path.Framework, Converter={StaticResource ProjectOutputPathFrameworkConverter}}" VerticalAlignment="Center" ToolTip="{Binding Path=Path.Framework, Converter={StaticResource ProjectOutputPathFrameworkNameConverter}}" >
 				<ComboBoxItem Visibility="{Binding Path.IsServerPath, Converter={StaticResource NotBoolVisibilityConverter}}" Content="Windows 8 Runtime" />
 				<!-- Uncomment for Silverlight Support
@@ -50,7 +50,7 @@
 			</ComboBox>
 		</Grid>
 	
-		<Button Name="Delete" Grid.Column="2" Margin="0,1,1,1" Click="Delete_Click" Padding="0" >
+		<Button Name="Delete" Grid.Column="2" Margin="5,5,0,5" Click="Delete_Click" Padding="0" HorizontalContentAlignment="Center" >
 			<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 		</Button>
 	</Grid>
