--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WCFArchitect.Interface.Main"
+﻿<Window x:Class="WCFArchitect.Interface.Main" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
