--- a/Designer/Interface/Project/Project.xaml
+++ b/Designer/Interface/Project/Project.xaml
@@ -78,6 +78,7 @@
 								<ColumnDefinition Width="*" />
 								<ColumnDefinition Width="*" />
 								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="Auto" />
 								<ColumnDefinition Width="20" />
 							</Grid.ColumnDefinitions>
 							<Grid.RowDefinitions>
@@ -86,7 +87,8 @@
 							<TextBlock Text="{Binding Path=Project.Name}" Grid.Column="0" Margin="5" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
 							<TextBlock Text="{Binding Path=Project.Namespace}" Grid.Column="1" Margin="5" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
 							<TextBlock Text="{Binding Path=Project.Namespace.URI}" Grid.Column="2" Margin="5" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
-							<Button Name="DeleteSelectedReference" Grid.Column="3" Grid.RowSpan="2" Margin="0" Padding="0" Visibility="Hidden" Background="Transparent" Click="DeleteSelectedReference_Click">
+							<CheckBox Grid.Column="3" Grid.Row="0" Margin="2" Content="Generate References" VerticalAlignment="Center" IsChecked="{Binding Path=GenerateReferences}" ToolTip="Generate any types referenced by this project in the project output code." />
+							<Button Name="DeleteSelectedReference" Grid.Column="4" Margin="0" Padding="0" Visibility="Hidden" Background="Transparent" Click="DeleteSelectedReference_Click">
 								<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 							</Button>
 						</Grid>
