--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -5,6 +5,7 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 		xmlns:c1="http://schemas.componentone.com/winfx/2006/xaml"
 		xmlns:c1datetime="clr-namespace:C1.WPF.DateTimeEditors;assembly=C1.WPF.DateTimeEditors.4"
+		xmlns:c1media="clr-namespace:C1.WPF.MediaPlayer;assembly=C1.WPF.MediaPlayer.4"
 		xmlns:pc="http://schemas.propsectivesoftware.com/pc"
 		xmlns:local="clr-namespace:WCFArchitect.Interface"
 		Icon="pack://application:,,,/WCFArchitect;component/Icons/DesignStudio.ico" 
@@ -219,6 +220,34 @@
 								</StackPanel>
 							</Border>
 						</StackPanel>
+						<TabControl Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="5,0,0,0">
+							<TabItem Header="GETTING STARTED" FontSize="12pt">
+								<FlowDocumentScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" >
+									<FlowDocument FontFamily="Segoe UI">
+										<Paragraph>
+											<Hyperlink NavigateUri="http://support.prospectivesoftware.net/display/WADOC/Introduction" RequestNavigate="Hyperlink_RequestNavigate">Introduction</Hyperlink>
+										</Paragraph>
+										<Paragraph>
+											<Hyperlink NavigateUri="http://support.prospectivesoftware.net/display/WADOC/Solutions+and+Projects" RequestNavigate="Hyperlink_RequestNavigate">Solutions and Projects</Hyperlink>
+										</Paragraph>
+										<List>
+											<ListItem><Paragraph><Hyperlink NavigateUri="http://support.prospectivesoftware.net/display/WADOC/Creating+A+Solution" RequestNavigate="Hyperlink_RequestNavigate">Creating a Solution</Hyperlink></Paragraph></ListItem>
+											<ListItem><Paragraph><Hyperlink NavigateUri="http://support.prospectivesoftware.net/display/WADOC/Adding+a+Project+to+a+Solution" RequestNavigate="Hyperlink_RequestNavigate">Adding Project to a Solution</Hyperlink></Paragraph></ListItem>
+											<ListItem><Paragraph><Hyperlink NavigateUri="http://support.prospectivesoftware.net/display/WADOC/The+Project+Navigator" RequestNavigate="Hyperlink_RequestNavigate">The Project Navigator</Hyperlink></Paragraph></ListItem>
+											<ListItem><Paragraph><Hyperlink NavigateUri="http://support.prospectivesoftware.net/display/WADOC/Configuring+a+Project" RequestNavigate="Hyperlink_RequestNavigate">Configuring a Project</Hyperlink></Paragraph></ListItem>
+										</List>
+									</FlowDocument>
+								</FlowDocumentScrollViewer>
+							</TabItem>
+							<TabItem Header="HOW-TO VIDEOS" FontSize="12pt">
+								<c1media:C1MediaPlayer AutoPlay="False">
+									<c1media:C1MediaItem MediaSource="./Videos/wcfa2intro.mp4" NaturalDuration="00:02:04" Title="Introdution" ThumbnailSource="pack://application:,,,/WCFArchitect;component/Icons/Thumbnails/Intro.png"></c1media:C1MediaItem>
+								</c1media:C1MediaPlayer>
+							</TabItem>
+							<TabItem Header="LATEST NEWS" FontSize="12pt">
+								
+							</TabItem>
+						</TabControl>
 					</Grid>
 					<Grid x:Name="OptionsScreen" Visibility="Collapsed" >
 						<Grid.ColumnDefinitions>
@@ -303,12 +332,12 @@
 									<TextBlock Text="WCF Architect makes use of the open-source Oxygen Icons. Due to the licensing of these icons we are required to post the modified versions of these icons for download on our website. You can use the link below to download the icons or you can head over the Open Icon Library project to download the unaltered icons." Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" TextWrapping="Wrap" Padding="4,0" Margin="0,10,0,5" Grid.Row="1" />
 									<TextBlock Text="Windows is a registered trademark of Microsoft Corporation in the United States and other countries." Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" TextWrapping="Wrap" Padding="4,0" Margin="0,10,0,5" Grid.Row="2" />
 									<TextBlock Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" Margin="0,5,0,5" Grid.Row="3" Padding="4,0">
-										<Hyperlink Name="MILink" NavigateUri="http://www.prospectivesoftware.com/architect/downloads/ModifiedIcons.zip" RequestNavigate="MILink_RequestNavigate" >
+										<Hyperlink Name="MILink" NavigateUri="http://www.prospectivesoftware.com/architect/downloads/ModifiedIcons.zip" RequestNavigate="Hyperlink_RequestNavigate" >
 											Download the Modified Oxygen Icons
 										</Hyperlink>
 									</TextBlock>
 									<TextBlock Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" Margin="0,5,0,5" Grid.Row="4" Padding="4,0">
-										<Hyperlink Name="OILLink" NavigateUri="http://openiconlibrary.sourceforge.net/" RequestNavigate="OILLink_RequestNavigate">
+										<Hyperlink Name="OILLink" NavigateUri="http://openiconlibrary.sourceforge.net/" RequestNavigate="Hyperlink_RequestNavigate">
 											Visit the Open Icon Library and download the Oxygen Icon Theme
 										</Hyperlink>
 									</TextBlock>
