--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -1,14 +1,14 @@
 ﻿<Grid x:Class="WCFArchitect.Interface.Data.DataElement"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:Data="clr-namespace:WCFArchitect.Interface.Data"
 	  xmlns:Docs="clr-namespace:WCFArchitect.Interface.Documentation"
 	  xmlns:c1="http://schemas.componentone.com/wpf/Basic"
 	  xmlns:pc="http://schemas.propsectivesoftware.com/pc"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	  DataContext="{Binding RelativeSource={RelativeSource Self}}" 
-      mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="750">
+	  mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="750">
 	<Grid.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -126,7 +126,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Automatic Data Update" FontSize="12pt" />
+		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Data Change Messaging" FontSize="12pt" />
 		<ToggleButton Grid.Row="1" Grid.Column="0" Content="Update ID" VerticalContentAlignment="Center" Margin="5" Padding="2,0" IsChecked="{Binding Path=Element.IsAutoDataID}" IsEnabled="{Binding Path=Element.IsValidAutoDataID}" ToolTip="Determines if the attribute can be browsed." />
 		<Label Content="Update Mode:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" Grid.Column="1" />
 		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" SelectedIndex="{Binding Path=Element.AutoDataUpdateMode, Converter={StaticResource AutoDataUpdateModeConverter}}" Grid.Column="1" Grid.Row="1" >
