--- a/Designer/Interface/Data/Data.xaml
+++ b/Designer/Interface/Data/Data.xaml
@@ -25,6 +25,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 		<Label Grid.Row="0" Margin="5" Padding="10,2,0,2" Content="Server Type:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="90" />
@@ -42,7 +43,22 @@
 			<Label Content="Data Change Batch Size:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="1" />
 			<c1:C1NumericBox Value="{Binding Path=OpenType.AutoDataBatchCount}" Format="G10" Margin="155,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="1" FontSize="10pt" />
 		</Grid>
-		<TabControl Grid.Row="4" Margin="0,10,0,0">
+		<Grid Name="OptionsGrid" Grid.Row="4" Margin="0,5,0,0" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+			</Grid.RowDefinitions>
+			<ToggleButton Grid.Column="0" Grid.Row="1" Content="Use Protocol Buffers" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Determines if the type is marked as a protocol buffer contract." />
+			<ToggleButton Grid.Column="1" Grid.Row="1" Content="Skip Constructor" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.ProtoSkipConstructor}" IsEnabled="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Supress the constuctor during deserialization." />
+			<ToggleButton Grid.Column="2" Grid.Row="1" Content="Use Protocol Members Only" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.ProtoMembersOnly}" IsEnabled="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="If the contract is marked with multiple attributes, use only members explicitly marked for protocol buffers." />
+			<ToggleButton Grid.Column="3" Grid.Row="1" Content="Ignore List Handling" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.ProtoIgnoreListHandling}" IsEnabled="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Use instance rules, list interfaces are ignored." />
+		</Grid>
+		<TabControl Grid.Row="5" Margin="0,10,0,0">
 			<TabItem Header="Members" FontSize="12pt" IsSelected="True">
 				<Grid>
 					<Grid.RowDefinitions>
